--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.9.2",
     "@titicaca/eslint-config-triple": "^3.1.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
