--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
     "@titicaca/eslint-config-triple": "^3.1.0",
+    "@types/node": "^17.0.33",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
