--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "components/*": ["src/components/*"],
       "styles/*": ["src/styles/*"],
-      "constants/*": ["src/constants/*"]
+      "constants/*": ["src/constants/*"],
+      "assets/*": ["src/assets/*"]
     }
   },
   "include": ["src"],
