섹션 전체 및 좌측 앱 아이콘 영역 스타일 작성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "components/*": ["src/components/*"],
       "styles/*": ["src/styles/*"],
       "constants/*": ["src/constants/*"],
-      "assets/*": ["src/assets/*"]
+      "assets/*": ["src/assets/*"],
+      "utils/*": ["src/utils/*"]
     }
   },
   "include": ["src"],
