--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "styles/*": ["src/styles/*"],
       "constants/*": ["src/constants/*"],
       "assets/*": ["src/assets/*"],
-      "utils/*": ["src/utils/*"]
+      "utils/*": ["src/utils/*"],
+      "hooks/*": ["src/hooks/*"]
     }
   },
   "include": ["src"],
