--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "constants/*": ["src/constants/*"],
       "assets/*": ["src/assets/*"],
       "utils/*": ["src/utils/*"],
-      "hooks/*": ["src/hooks/*"]
+      "hooks/*": ["src/hooks/*"],
+      "data/*": ["src/data/*"]
     }
   },
   "include": ["src"],
